tests/gold/parser/bug_fixes.d

// issue #76
immutable trst = ["some", "any",]; // error
enum SE
{
one,
two, // error
}